<?xml version="1.0" encoding="UTF-8"?>
<resources>

	<string name="app_name">HunNor Lucene</string>

	<string name="ok">OK</string>
	<string name="error">Error</string>
	<string name="error_unknown">unknown error</string>

	<string name="last_modified">Last modified</string>
	<string name="size">Size</string>

	<string name="io_read_write">read/write</string>
	<string name="io_read_only">read only</string>
	<string name="io_not_ready">not ready</string>
	<string name="io_create_ok">created</string>
	<string name="io_create_error">failed to create</string>
	<string name="io_exception">io exception</string>
	<string name="io_delete_error">delete failed</string>
	<string name="io_rename_error">rename failed</string>
	<string name="io_extract_error">extract failed</string>

	<string name="index_corrupt">corrupt index</string>

	<string name="net_online">online</string>
	<string name="net_offline">offline</string>
	<string name="net_malformed_url">malformed URL</string>
	<string name="net_protocol_exception">protocol exception</string>
	<string name="net_download_error">download failed</string>

	<string name="database_alert_title">Dictionary database not found</string>
	<string name="database_alert_text">To use the application, you must first download the dictionary database. Proceedto the database settings page?</string>
	<string name="database_alert_option_no">No</string>
	<string name="database_alert_option_yes">Yes</string>

	<string name="database_breadcrumb">HunNor Lucene: Database</string>
	<string name="database_back_to_search_button_descr">Back to Search</string>
	<string name="database_check_external_storage">Checking extertal storage</string>
	<string name="database_check_app_directory">Checking app directory</string>
	<string name="database_check_index_directory">Checking index directory</string>
	<string name="database_index_directory_empty">Index directory empty</string>
	<string name="database_check_index_integrity">Checking index integrity</string>
	<string name="database_check_internet_connection">Checking Internet connection</string>
	<string name="database_check_update_url">Checking update URL</string>
	<string name="database_download">Downloading</string>
	<string name="database_extract">Extracting</string>
	<string name="database_install">Installing</string>

	<string name="database_button_check_for_updates">Check for updates</string>
	<string name="database_button_download_updates">Download updates</string>

	<string name="search_no_results">No results</string>
	<string name="search_num_result">result</string>
	<string name="search_num_results">results</string>
	<string name="search_exception">Error during search</string>
	<string name="search_button">Search</string>
	<string name="search_recognize_hu_descr">Recognize HU</string>
	<string name="search_recognize_no_descr">Recognize NO</string>
	<string name="search_result_flag_descr">Flag</string>

	<string name="voice_not_available">Voice recognition not available</string>
	<string name="voice_hint">Voice recognition launched for HunNor Lucene</string>
	<string name="voice_hu">HU</string>
	<string name="voice_no">NO</string>
	
	<string name="menu_search">Search</string>
	<string name="menu_database">Database</string>

</resources>
