<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
	<LinearLayout
			android:id="@+id/database_head_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="4dp"
			android:paddingRight="4dp"
			android:paddingLeft="4dp"
			android:orientation="horizontal"
			android:background="#d3d3d3"
			android:gravity="center">
		<TextView
		    	android:id="@+id/database_head_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/database_breadcrumb"
				android:textSize="12sp">
		</TextView>
		<ImageButton
		    	android:id="@+id/database_back_to_search_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/search"
				android:contentDescription="@string/database_back_to_search_button_descr"
				android:background="@android:color/transparent"/>
	</LinearLayout>
	<TextView
			android:id="@+id/database_info"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="4dp"
			android:paddingRight="4dp"
			android:paddingLeft="4dp"/>
	<Button
			android:id="@+id/update_check_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/database_button_check_for_updates"/>
	<Button
			android:id="@+id/update_download_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/database_button_download_updates"/>
	<TextView
			android:id="@+id/update_status"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
</LinearLayout>
