<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context=".SearchActivity">
	<LinearLayout
			android:id="@+search/search_input_container"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:orientation="horizontal">
		<EditText
				android:id="@+search/search_input_field"
				android:layout_height="wrap_content"
				android:layout_width="0dip"
				android:layout_weight="1"
				android:singleLine="true"
				android:inputType="text"/>
		<Button
				android:id="@+search/search_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/search_button"/>
		<Button
				android:id="@+search/voice_no_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/voice_no"/>
		<Button
				android:id="@+search/voice_hu_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/voice_hu"/>
		</LinearLayout>
	<LinearLayout
			android:id="@+search/search_result_container"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:orientation="vertical">
		<TextView
		    android:id="@+search/search_errors"
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"/>
	    <ListView
				android:id="@+search/search_result_list"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
	</LinearLayout>
</LinearLayout>
